--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,3 +4,48 @@
     --color1: #49a09d;
     --color2: #5f2c82;
 }
+
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+    background-color: var(--color2);
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+
+}
+
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.423);
+}
+
+section#login > div#imagem{
+    display: block;
+    background: var(--color2) url(../imagens/imagem-fundo.jpg) no-repeat;
+    background-size: cover;
+    border-radius:20px 20px 0px 0px;
+    height: 200px;
+}
+
+section#login > div#formulario{
+    display: block;
+    padding: 10px;
+}
