--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,6 +35,8 @@ section#login{
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.423);
+    transition: width 0.2s, height 0.2s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem{
