--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -37,13 +37,21 @@
         
     }
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 50%;
     }
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
-        border-radius: 20px 0px 0px 20px;
+        border-radius: 0px 20px 20px 0px;
+    }
+
+    div#formulario > h1{
+        font-size: 2.0em;
+    }
+    
+    div#formulario > p{
+        font-size: 1.2em;
     }
 }
