--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -12,7 +12,7 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px){
-    body{background: linear-gradient(to bottom, var(--color2), var(--color1));}
+    body{background: linear-gradient(to bottom, var(--color2), var(--color1));width: 100vw;height: 100vh;}
 
     section#login{
         width: 90vw;
