--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,6 +3,7 @@
 :root{
     --color1: #49a09d;
     --color2: #5f2c82;
+    --color3: #2d6462;
 }
 
 *{
@@ -32,7 +33,7 @@ section#login{
     transform: translate(-50%, -50%);
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.423);
     transition: width 0.2s, height 0.2s;
@@ -59,4 +60,54 @@ div#formulario > h1{
 
 div#formulario > p{
     font-size: 0.8em;
+}
+
+form > div.espaco{
+    background-color: var(--color2);
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.espaco > label{
+    display: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1.0em;
+    width: 100%;
+    height: 40px;
+    background-color: var(--color1);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover{
+    background-color: var(--color3);
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    padding-top: 5px;
+    margin-top: 5px ;
+    width: 100%;
+    height: 40px;
+    background-color: white;
+    color: var(--color3);
+    border: 1px solid var(--color3);
+    border-radius: 7px;
+    text-decoration: none;
+}
+form > a.botao:hover{
+    background-color: #6cd3cf;
+}
+form > a.botao > i{
+    font-size: 1em;
 }
