--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -16,6 +16,7 @@
 
     section#login{
         width: 90vw;
+        height: 280px;    
     }
     section#login > div#imagem{
         float: left;
@@ -34,6 +35,7 @@
 
     section#login{
         width: 950px;
+        height: 350px;
         
     }
     section#login > div#formulario{
@@ -53,5 +55,6 @@
     
     div#formulario > p{
         font-size: 1.2em;
+        margin: 20px 0px;
     }
 }
