--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,6 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     width: 250px;
     height: 515px;
@@ -38,6 +37,7 @@ section#login{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.423);
     transition: width 0.2s, height 0.2s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 }
 
 section#login > div#imagem{
@@ -83,14 +83,18 @@ div.espaco > i{
 }
 
 div.espaco > input{
-    background-color: var(--color1);
+    background-color: #94cfcd;
     font-size: 1em;
     height: 100%;
     width: calc(100% - 45px);
-    transform: translateY(-12px);
     border: 0px;
     border-radius: 8px;
     padding: 4px;
+    transform: translateY(-12px);
+}
+
+div.espaco > input:focus-within{
+    background-color: white;
 }
 
 form > input[type=submit]{
